# pack-recover

./: .gitignore  Cargo.toml  Makefile  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: main.rs
test_archives/: 7z_content_encrypted.7z  7z_header_encrypted.7z  7z_no_password.7z  7z_simple_password.7z  content_encrypted.rar  header_encrypted.rar  no_password.rar  rar5_encrypted.rar  simple_password.rar  testfile.txt  wordlist.txt  wordlist_fail.txt
